Try fix font problem on mobile device

--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -1,9 +1,9 @@
 @font-face {
-  font-family: title;
+  font-family: 'titleFont';
   src: url(/css/title_font.woff) format('woff');
 }
 @font-face {
-  font-family: subtitle;
+  font-family: 'subtitleFont';
   src: url(/css/subtitle_font.woff) format('woff');
 }
 
